fix drink image stretching

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -42,9 +42,6 @@ img.disabled {
         padding: 0px;
       }
       .panel-body{
-        display: flex;
-        align-content: center;
-        justify-content: space-around;
         padding: 0;
         padding-top: 20px;
         .drink-img{
